src/main/metadata-excluded/objects/TestEpAdapterChild__c.object
<CustomObject>
    <fields>
        <fullName>NumberOfUnits__c</fullName>
        <label>Number Of Units</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestParent__c</fullName>
        <label>TestParent</label>
        <referenceTo>TestEpAdapterParent__c</referenceTo>
        <relationshipLabel>TestEpAdapterChilds</relationshipLabel>
        <relationshipName>TestEpAdapterChilds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TestEpAdapterChild</label>
    <nameField>
        <label>TestEpAdapterChild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestEpAdapterChilds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>